# eolymp.com

./: .gitignore  new_c.sh  new_cpp.sh  readme.md
1/src/: main.c
20/src/: main.c
21/: generate_data.py  input.txt  input2.txt  input4.txt  input5.txt  input_rand.txt
21/src/: main.c
22/: CMakeLists.txt
22/src/: main.c
4/src/: main.c
cc/src/: main.c
cpp/: CMakeLists.txt  Makefile
cpp/src/: main.cpp
